--- a/API.CoinMarketCap/API.CoinMarketCap.csproj
+++ b/API.CoinMarketCap/API.CoinMarketCap.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Response\Latest\" />
+    <Folder Include="Response\Historical\" />
+    <Folder Include="Response\Map\" />
+  </ItemGroup>
+
 </Project>
