--- a/API.CoinMarketCap/API.CoinMarketCap.csproj
+++ b/API.CoinMarketCap/API.CoinMarketCap.csproj
@@ -2,6 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.0.1</Version>
+    <Authors>Maitland Marshall</Authors>
+    <Product>API.CoinMarketCap</Product>
+    <Description>A .NET Standard C# implementation of the CoinMarketCap API.</Description>
+    <PackageProjectUrl></PackageProjectUrl>
+    <RepositoryUrl>https://github.com/maitlandmarshall/API.CoinMarketCap</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
