--- a/API.CoinMarketCap/API.CoinMarketCap.csproj
+++ b/API.CoinMarketCap/API.CoinMarketCap.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.0.1</Version>
+    <Version>0.0.2</Version>
     <Authors>Maitland Marshall</Authors>
     <Product>API.CoinMarketCap</Product>
     <Description>A .NET Standard C# implementation of the CoinMarketCap API.</Description>
@@ -15,7 +15,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Response\Latest\" />
     <Folder Include="Response\Historical\" />
     <Folder Include="Response\Map\" />
   </ItemGroup>
